// Copyright (c) 2019 Sylabs, Inc. All rights reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package slurm;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

service WorkloadManager {
    rpc SubmitJob (SubmitJobRequest) returns (SubmitJobResponse);
    rpc CancelJob (CancelJobRequest) returns (CancelJobResponse)
    rpc JobInfo (JobInfoRequest) returns (JobInfoResponse);
    rpc JobSteps (JobStepsRequest) returns (JobStepsResponse);
    rpc OpenFile (OpenFileRequest) returns (stream Chunk);
    rpc TailFile (TailFileRequest) returns (stream Chunk);
}

message SubmitJobRequest {
    string script = 1;
}

message SubmitJobResponse {
    int64 job_id = 1;
}

message CancelJobRequest {
    int64 job_id = 1;
}

message CancelJobResponse {
}

message JobInfoRequest {
    int64 job_id = 1;
}

message JobInfoResponse {
    JobInfo info = 1;
}

message JobStepsRequest {
    int64 job_id = 1;
}

message JobStepsResponse {
    repeated JobStepInfo job_steps = 1;
}


message OpenFileRequest {
    string path = 1;
}


message TailFileRequest {
    string path = 1;
}


enum JobStatus {
    COMPLETED = 0;
    CANCELLED = 1;
    FAILED = 2;
    UNKNOWN = 3;
}

message JobInfo {
    string id = 1;
    string user_id = 2;
    string name = 3;
    string exit_code = 4;
    JobStatus status = 5;
    google.protobuf.Timestamp submit_time = 6;
    google.protobuf.Timestamp start_time = 7;
    google.protobuf.Duration run_time = 8;
    google.protobuf.Duration time_limit = 9;
    string working_dir = 10;
    string std_out = 11;
    string std_err = 12;
    string partition = 13;
    string node_list = 14;
    string batch_host = 15;
    string num_nodes = 16;
}

message JobStepInfo {
    string id = 1;
    string name = 2;
    int32 exit_code = 3;
    JobStatus status = 4;
    google.protobuf.Timestamp start_time = 5;
    google.protobuf.Duration end_time = 6;
}

message Chunk {
    bytes content = 1;
}